--- a/lab3/Hugo_Morvan.Rmd
+++ b/lab3/Hugo_Morvan.Rmd
@@ -228,7 +228,7 @@ q_learning <- function(start_state, epsilon = 0.5, alpha = 0.1, gamma = 0.95,
 
 - Run 10000 episodes of Q-learning with $\epsilon = 0.5$, $\beta = 0$, $\alpha = 0.1$ and $\gamma = 0.95$. To do so, simply run the code provided in the file `RL_Lab1.R`. The code visualizes the Q-table and a greedy policy derived from it after episodes 10, 100, 1000 and 10000. 
 
-```{r 4, cache=TRUE}
+```{r 4}
 set.seed(123)
 # Environment A (learning)
 
@@ -272,7 +272,7 @@ This is a 7x8 environment where the top and bottom rows have negative rewards. I
 Your task is to investigate how the $\epsilon$ and $\gamma$ parameters affect the learned policy by running 30000 episodes of Q-learning with $\epsilon$ = 0.1, 0.5, $\gamma$ = 0.5, 0.75, 0.95, $\beta$ = 0 and $\alpha$ = 0.1. 
 To do so, simply run the code provided in the file RL Lab1.R and explain your observations.
 
-```{r 5, cache=TRUE}
+```{r 5}
 # Environment B (the effect of epsilon and gamma)
 
 H <- 7
@@ -336,14 +336,14 @@ Epsilon is responsible for the exploration rate of the agent. If epsilon is smal
 
 Effect of gamma:
 
-Gamma describes the preference for the agent for present or future rewards. A large gamma gives a preference for future rewards while a small gamma gives a preference for immediate rewards.
+Gamma describes the preference for the agent for present or future rewards. A large gamma gives a preference for future rewards while a small gamma gives a preference for immediate rewards. Short term reward can be observed on the graph with epsilon = 0.5 and gamma = 0.5 where the optimal policy goes towards the 5 reward while on the graph with epsilon = 0.5 and gamma = 0.95, the optimal policy goes around the 5 reward to go to the 10 reward instead.
 
 
 ## 4. Environment C. 
 
 This is a smaller 3x6 environment. Here the agent starts each episode in the state (1,1). Your task is to investigate how the $\beta$ parameter affects the learned policy by running 10000 episodes of Q-learning with $\beta$= 0, 0.2, 0.4, 0.66, $\epsilon$ = 0.5, $\gamma$ = 0.6 and $\alpha$ = 0.1. To do so, simply run the code provided in the file RL Lab1.R and explain your observations.
 
-```{r 6, cache=TRUE}
+```{r 6}
 
 H <- 3
 W <- 6
@@ -365,26 +365,296 @@ for(j in c(0,0.2,0.4,0.66)){
   vis_environment(i, gamma = 0.6, beta = j)
 }
 ```
-
+The beta parameter is slipping factor, i.e. how often the agent will take an accidental side step. In this environment, the beta parameter will affect how much the agent is willing to be close to the -1 rewards. With beta=0, the agent does slip and therefore does not care about being close to the -1 rewards and therefore goes alongside it to reach the 10 reward. With higher beta values, the agent tries to avoid getting close to the -1 rewards as there is a chance to accidentally walk into it, therefore the optimal policy is to take the long route by the top of the environment. The higher the beta, the more arrows are pointing perpendicular to the optimal direction, meaning that the agent knows that it will eventually take an accidental side step towards the optimal direction.
 
 ## 5. REINFORCE. 
 
 The file RL Lab2 Colab.ipynb in the course website contains an implementation of the REINFORCE algorithm. The file also contains the result of running the code, so that you do not have to run it. So, you do not need to run it if you do not want. Your task is to study the code and the results obtained, and answer some questions.
 We will work with a 4 x 4 grid. We want the agent to learn to navigate to a random goal position in the grid. The agent will start in a random position and it will be told the goal position. The agent receives a reward of 5 when it reaches the goal. Since the goal position can be any position, we need a way to tell the agent where the goal is. Since our agent does not have any memory mechanism, we provide the goal coordinates as part of the state at every time step, i.e. a state consists now of four coordinates: Two for the position of the agent, and two for the goal position. The actions of the agent can however only impact its own position, i.e. the actions do not modify the goal position. Note that the agent initially does not know that the last two coordinates of a state indicate the position with maximal reward, i.e. the goal position. It has to learn it. It also has to learn a policy to reach the goal position from the initial position. Moreover, the policy has to depend on the goal position, because it is chosen at random in each episode. Since we only have a single non-zero reward, we do not specify a reward map. Instead, the goal coordinates are passed to the functions that need to access the reward function.
 
+```{r 7, eval=FALSE, include=FALSE}
+################################################################################################
+# REINFORCE
+################################################################################################
+
+#install.packages("keras")
+library(keras)
+
+# install.packages("ggplot2")
+# install.packages("vctrs")
+library(ggplot2)
+
+arrows <- c("^", ">", "v", "<")
+action_deltas <- list(c(1,0), # up
+                      c(0,1), # right
+                      c(-1,0), # down
+                      c(0,-1)) # left
+
+vis_prob <- function(goal, episodes = 0){
+  
+  # Visualize an environment with rewards. 
+  # Probabilities for all actions are displayed on the edges of each tile.
+  # The (greedy) policy for each state is also displayed.
+  # 
+  # Args:
+  #   goal: goal coordinates, array with 2 entries.
+  #   episodes, epsilon, alpha, gamma, beta (optional): for the figure title.
+  #   H, W (global variables): environment dimensions.
+  
+  df <- expand.grid(x=1:H,y=1:W)
+  dist <- array(data = NA, dim = c(H,W,4))
+  class <- array(data = NA, dim = c(H,W))
+  for(i in 1:H)
+    for(j in 1:W){
+      dist[i,j,] <- DeepPolicy_dist(i,j,goal[1],goal[2])
+      foo <- which(dist[i,j,]==max(dist[i,j,]))
+      class[i,j] <- ifelse(length(foo)>1,sample(foo, size = 1),foo)
+    }
+  
+  foo <- mapply(function(x,y) ifelse(all(c(x,y) == goal),NA,dist[x,y,1]),df$x,df$y)
+  df$val1 <- as.vector(round(foo, 2))
+  foo <- mapply(function(x,y) ifelse(all(c(x,y) == goal),NA,dist[x,y,2]),df$x,df$y)
+  df$val2 <- as.vector(round(foo, 2))
+  foo <- mapply(function(x,y) ifelse(all(c(x,y) == goal),NA,dist[x,y,3]),df$x,df$y)
+  df$val3 <- as.vector(round(foo, 2))
+  foo <- mapply(function(x,y) ifelse(all(c(x,y) == goal),NA,dist[x,y,4]),df$x,df$y)
+  df$val4 <- as.vector(round(foo, 2))
+  foo <- mapply(function(x,y) ifelse(all(c(x,y) == goal),NA,class[x,y]),df$x,df$y)
+  df$val5 <- as.vector(arrows[foo])
+  foo <- mapply(function(x,y) ifelse(all(c(x,y) == goal),"Goal",NA),df$x,df$y)
+  df$val6 <- as.vector(foo)
+  
+  print(ggplot(df,aes(x = y,y = x)) +
+          geom_tile(fill = 'white', colour = 'black') +
+          scale_fill_manual(values = c('green')) +
+          geom_tile(aes(fill=val6), show.legend = FALSE, colour = 'black') +
+          geom_text(aes(label = val1),size = 2,nudge_y = .35,na.rm = TRUE) +
+          geom_text(aes(label = val2),size = 2,nudge_x = .35,na.rm = TRUE) +
+          geom_text(aes(label = val3),size = 2,nudge_y = -.35,na.rm = TRUE) +
+          geom_text(aes(label = val4),size = 2,nudge_x = -.35,na.rm = TRUE) +
+          geom_text(aes(label = val5),size = 5,na.rm = TRUE) +
+          geom_text(aes(label = val6),size = 5,na.rm = TRUE) +
+          ggtitle(paste("Action probabilities after ",episodes," episodes")) +
+          theme(plot.title = element_text(hjust = 0.5)) +
+          scale_x_continuous(breaks = c(1:W),labels = c(1:W)) +
+          scale_y_continuous(breaks = c(1:H),labels = c(1:H)))
+  
+}
+
+transition_model <- function(x, y, action, beta){
+  
+  # Computes the new state after given action is taken. The agent will follow the action 
+  # with probability (1-beta) and slip to the right or left with probability beta/2 each.
+  # 
+  # Args:
+  #   x, y: state coordinates.
+  #   action: which action the agent takes (in {1,2,3,4}).
+  #   beta: probability of the agent slipping to the side when trying to move.
+  #   H, W (global variables): environment dimensions.
+  # 
+  # Returns:
+  #   The new state after the action has been taken.
+  
+  delta <- sample(-1:1, size = 1, prob = c(0.5*beta,1-beta,0.5*beta))
+  final_action <- ((action + delta + 3) %% 4) + 1
+  foo <- c(x,y) + unlist(action_deltas[final_action])
+  foo <- pmax(c(1,1),pmin(foo,c(H,W)))
+  
+  return (foo)
+}
+
+DeepPolicy_dist <- function(x, y, goal_x, goal_y){
+  
+  # Get distribution over actions for state (x,y) and goal (goal_x,goal_y) from the deep policy.
+  #
+  # Args:
+  #   x, y: state coordinates.
+  #   goal_x, goal_y: goal coordinates.
+  #   model (global variable): NN encoding the policy.
+  # 
+  # Returns:
+  #   A distribution over actions.
+  
+  foo <- matrix(data = c(x,y,goal_x,goal_y), nrow = 1)
+  
+  # return (predict_proba(model, x = foo))
+  return (predict_on_batch(model, x = foo)) # Faster.
+  
+}
+
+DeepPolicy <- function(x, y, goal_x, goal_y){
+  
+  # Get an action for state (x,y) and goal (goal_x,goal_y) from the deep policy.
+  #
+  # Args:
+  #   x, y: state coordinates.
+  #   goal_x, goal_y: goal coordinates.
+  #   model (global variable): NN encoding the policy.
+  # 
+  # Returns:
+  #   An action, i.e. integer in {1,2,3,4}.
+  
+  foo <- DeepPolicy_dist(x,y,goal_x,goal_y)
+  
+  return (sample(1:4, size = 1, prob = foo))
+  
+}
+
+DeepPolicy_train <- function(states, actions, goal, gamma){
+  
+  # Train the policy network on a rolled out trajectory.
+  # 
+  # Args:
+  #   states: array of states visited throughout the trajectory.
+  #   actions: array of actions taken throughout the trajectory.
+  #   goal: goal coordinates, array with 2 entries.
+  #   gamma: discount factor.
+  
+  # Construct batch for training.
+  inputs <- matrix(data = states, ncol = 2, byrow = TRUE)
+  inputs <- cbind(inputs,rep(goal[1],nrow(inputs)))
+  inputs <- cbind(inputs,rep(goal[2],nrow(inputs)))
+  
+  targets <- array(data = actions, dim = nrow(inputs))
+  targets <- to_categorical(targets-1, num_classes = 4)  
+  
+  # Sample weights. Reward of 5 for reaching the goal.
+  weights <- array(data = 5*(gamma^(nrow(inputs)-1)), dim = nrow(inputs))
+  
+  # Train on batch. Note that this runs a SINGLE gradient update.
+  train_on_batch(model, x = inputs, y = targets, sample_weight = weights)
+  
+}
+
+reinforce_episode <- function(goal, gamma = 0.95, beta = 0){
+  
+  # Rolls out a trajectory in the environment until the goal is reached.
+  # Then trains the policy using the collected states, actions and rewards.
+  # 
+  # Args:
+  #   goal: goal coordinates, array with 2 entries.
+  #   gamma (optional): discount factor.
+  #   beta (optional): probability of slipping in the transition model.
+  
+  # Randomize starting position.
+  cur_pos <- goal
+  while(all(cur_pos == goal))
+    cur_pos <- c(sample(1:H, size = 1),sample(1:W, size = 1))
+  
+  states <- NULL
+  actions <- NULL
+  
+  steps <- 0 # To avoid getting stuck and/or training on unnecessarily long episodes.
+  while(steps < 20){
+    steps <- steps+1
+    
+    # Follow policy and execute action.
+    action <- DeepPolicy(cur_pos[1], cur_pos[2], goal[1], goal[2])
+    new_pos <- transition_model(cur_pos[1], cur_pos[2], action, beta)
+    
+    # Store states and actions.
+    states <- c(states,cur_pos)
+    actions <- c(actions,action)
+    cur_pos <- new_pos
+    
+    if(all(new_pos == goal)){
+      # Train network.
+      DeepPolicy_train(states,actions,goal,gamma)
+      break
+    }
+  }
+  
+}
+
+
+```
+
+
 ## 6. Environment D. 
 
 In this task, we will use eight goal positions for training and, then, validate the learned policy on the remaining eight possible goal positions. The training and validation goal positions are stored in the lists `train_goals` and `val_goals` in the code in the file `RL_Lab2_Colab.ipynb`. The results provided in the file correspond to running the REINFORCE algorithm for 5000 episodes with $\beta$ = 0 and $\gamma$ = 0.95. Each training episode uses a random goal position from `train_goals`. The initial position for the episode is also chosen at random. When training is completed, the code validates the learned policy for the goal positions in `val_goals`. This is done by with the help of the function vis prob, which shows the grid, goal position and learned policy. Note that each non-terminal tile has four values.
-These represent the action probabilities associated to the tile (state). Note also that each nonterminal tile has an arrow. This indicates the action with the largest probability for the tile (ties are broken at random). Finally, answer the following questions:
+These represent the action probabilities associated to the tile (state). Note also that each nonterminal tile has an arrow. This indicates the action with the largest probability for the tile (ties are broken at random). 
+
+```{r 8, eval=FALSE, include=FALSE}
+# Environment D (training with random goal positions)
+
+H <- 4
+W <- 4
+
+# Define the neural network (two hidden layers of 32 units each).
+model <- keras::keras_model_sequential()
+model %>% 
+  layer_dense(units = 32, input_shape = c(4), activation = 'relu') %>% 
+  layer_dense(units = 32, activation = 'relu') %>% 
+  layer_dense(units = 4, activation = 'softmax')
+
+compile(model, loss = "categorical_crossentropy", optimizer = optimizer_sgd(lr=0.001))
+
+initial_weights <- get_weights(model)
+
+train_goals <- list(c(4,1), c(4,3), c(3,1), c(3,4), c(2,1), c(2,2), c(1,2), c(1,3))
+val_goals <- list(c(4,2), c(4,4), c(3,2), c(3,3), c(2,3), c(2,4), c(1,1), c(1,4))
+
+show_validation <- function(episodes){
+  
+  for(goal in val_goals)
+    vis_prob(goal, episodes)
+  
+}
+
+set_weights(model,initial_weights)
+
+show_validation(0)
+
+for(i in 1:5000){
+  # if(i%%10==0) cat("episode",i,"\n")
+  goal <- sample(train_goals, size = 1)
+  reinforce_episode(unlist(goal))
+}
+
+show_validation(5000) 
+
+
+```
+
+Finally, answer the following questions:
 
 - Has the agent learned a good policy? Why / Why not ?
 
+It seems like the agent has learned a good policy as no matter where the goal is appearing, all the arrow are pointing towards it.
+
 - Could you have used the Q-learning algorithm to solve this task ?
 
+Q-learning would have not be able to solve this task as it can only learn one optimal policy, which would not react well to a goal changing position.
+
 ## 7. Environment E. 
+
+```{r 9, eval=FALSE, include=FALSE}
+# Environment E (training with top row goal positions)
+
+train_goals <- list(c(4,1), c(4,2), c(4,3), c(4,4))
+val_goals <- list(c(3,4), c(2,3), c(1,1))
+
+set_weights(model,initial_weights)
+
+show_validation(0)
+
+for(i in 1:5000){
+  # if(i%%10==0) cat("episode", i,"\n")
+  goal <- sample(train_goals, size = 1)
+  reinforce_episode(unlist(goal))
+}
+
+show_validation(5000)
+```
+
 
 In this task, the goals for training are all from the top row of the grid. The validation goals are three positions from the rows below. To solve this task, simply study the code and results provided in the file RL Lab2 Colab.ipynb and answer the following questions:
 
 - Has the agent learned a good policy? Why / Why not ?
 
+The agent has not learned a good policy. This is because the agent only sees goals in the first two rows of the environment during training, it is therefore not able to adapt to goals appearing in the lower two rows.
+
 - If the results obtained for environments D and E differ, explain why
+
+The results obtained in environments D and E differ because the agent is not trained in the same conditions. Hence, the generalization capabilities are different.
