--- a/lab4/GroupReport.Rmd
+++ b/lab4/GroupReport.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Advanced Machine Learning"
-author: "Hugo Morvan (hugmo418)"
+author: "Hugo M (hugmo418), Emanuel H (emahe385), Viktor B (vikbe291)"
 date: "`r Sys.Date()`"
 output: pdf_document
 editor_options: 
@@ -8,11 +8,16 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = T, message = F, warning = F, fig.width = 10, fig.height = 6, fig.align = "center", cache = T, out.width="100%", out.height="100%")
+knitr::opts_chunk$set(echo = T, message = F, warning = F, fig.width = 10, fig.height = 5, 
+                      fig.align = "center", cache = T)
 
 ```
 
 # Lab 4: Gaussian Processes
+
+## Statement of Contribution
+
+This report was made based on one of the group member's report, using said group member's code aswell. All group members participated in the creation of the report as all discussions have been rewritten based on what was discussed by the group.
 
 ## 1. Implementing GP Regression.
 
@@ -39,6 +44,7 @@ Write your own code for simulating from the posterior distribution of f using th
 ```{r libraries}
 library(kernlab)
 library(AtmRay)
+#library(caret)
 ```
 
 
@@ -91,7 +97,6 @@ sigmaf = 1
 sigma_n = 0.1
 ell = 0.3
 xGrid <- matrix(seq(-1,1,length=50))
-
 obs = data.frame(X=c(0.4), y=c(0.719))
 #Updating prior with a single observation
 updated_prior = posteriorGP(obs$X, obs$y, Xstar = xGrid, sigmaNoise = sigma_n, 
@@ -119,7 +124,9 @@ Hint: Updating the posterior after one observation with a new observation gives 
 
 ```{r 1.3}
 obs = data.frame(X=c(0.4, -0.6), y=c(0.719, -0.044))
-updated_prior = posteriorGP(obs$X, obs$y, Xstar=xGrid, sigmaNoise=sigma_n, sigmaF=sigmaf, l=ell )
+#Updating prior with a single observation
+updated_prior = posteriorGP(obs$X, obs$y, Xstar = xGrid, sigmaNoise = sigma_n, 
+                            sigmaF = sigmaf, l=ell )
 plot_res(updated_prior, obs)
 ```
 
@@ -142,7 +149,8 @@ Compute the posterior distribution of $f$ using all the five data points in the 
 ```{r 1.4}
 obs = data.frame(X=c(-1.0 , -0.6 , -0.2 , 0.4 , 0.8), y=c(0.768 , -0.044 , -0.940 , 0.719 , -0.664))
 #Updating prior with a single observation
-updated_prior = posteriorGP(obs$X, obs$y, Xstar=xGrid, sigmaNoise=sigma_n, sigmaF=sigmaf, l=ell )
+updated_prior = posteriorGP(obs$X, obs$y, Xstar = xGrid, sigmaNoise = sigma_n, 
+                            sigmaF = sigmaf, l=ell )
 plot_res(updated_prior, obs)
 ```
 
@@ -151,14 +159,15 @@ plot_res(updated_prior, obs)
 Repeat (4), this time with hyperparameters $\sigma_f = 1$ and $l = 1$. Compare the results.
 
 ```{r 1.5}
+
 obs = data.frame(X=c(-1.0 , -0.6 , -0.2 , 0.4 , 0.8), y=c(0.768 , -0.044 , -0.940 , 0.719 , -0.664))
-updated_prior = posteriorGP(obs$X, obs$y, Xstar=xGrid, sigmaNoise=sigma_n, sigmaF=1, l=1 )
+#Updating prior with a single observation
+updated_prior = posteriorGP(obs$X, obs$y, Xstar = xGrid, sigmaNoise = sigma_n, sigmaF = 1, l=1 )
 plot_res(updated_prior, obs)
 ```
 
 Comparaison of the results:
-
-Increasing $l$ in the later plot gives us a smoother function, which is to be expected given that $l$ is responsible for the smoothness of the posterior distribution. 
+Increasing $l$ in the later plot gives us a smoother function, which is to be expected given that $l$ is responsible for the smoothness of the posterior distribution. Since we assume a smooth function, it also leads to smaller confidence bands. This is because if the function cannot vary too much, then we can more confidently know where it should be given some points. However, if it is too smooth, we do not fit all the points. By the smoothness assumption, they are considered as outliers.
 
 ## 2. GP Regression with kernlab.
 
@@ -173,6 +182,7 @@ data = read.csv("https://github.com/STIMALiU/AdvMLCourse/raw/master/GaussianProc
 dates = data$date
 dates = as.Date(dates, "%d/%m/%y")
 temps = as.numeric(data$temp)
+
 
 t0 = dates[1]
 
@@ -192,10 +202,14 @@ subsample <- function(x,by){
   idx = seq.int(1, end, by = by)
   return(x[idx])
 }
-
+#test = seq.int(1,100)
+#subsample(test, 5)
 time = subsample(time, 5)
+
 day = subsample(day, 5)
+
 temp = subsample(temps, 5)
+
 ```
 
 ### 2.1)
@@ -236,14 +250,15 @@ sigmaNoise = sd(quadFit$residuals)
 
 # Fit the GP with built-in square expontial kernel (called rbfdot in kernlab).
 k_20_100 <- SEkernel(sigmaf = 20, ell = 100)
-GPfit <- gausspr(time, temp, kernel = k_20_100 , var = sigmaNoise^2, variance.model = TRUE,scaled=FALSE)
+GPfit <- gausspr(time, temp, kernel = k_20_100 , var = sigmaNoise^2, 
+                 variance.model = TRUE,scaled=FALSE)
 meanPred1 <- predict(GPfit, time)
-stdPred1 <- predict(GPfit,time, type="sdeviation")
+varPred1 <- predict(GPfit,time, type="sdeviation")
 
 plot(time,temp, pch=20, col="grey",main = "Data fit for the Time kernel")
 lines(time, meanPred1, col="blue", lwd = 2)
-lines(time, meanPred1+1.96*stdPred1,col="blue", lty=2)
-lines(time, meanPred1-1.96*stdPred1,col="blue", lty=2)
+lines(time, meanPred1+1.96*varPred1,col="blue", lty=2)
+lines(time, meanPred1-1.96*varPred1,col="blue", lty=2)
 legend(1500, -10, legend=c("Mean", "95% conf. bands"),
        col=c("blue", "blue"), lty=c(1,2), cex=0.8)
 ```
@@ -255,6 +270,7 @@ Repeat the previous exercise, but now use Algorithm 2.1 on page 19 of Rasmussen 
 ```{r 2.3}
 quadFit <- lm(temp ~  time + I(time^2))
 sigmaNoise = sd(quadFit$residuals)
+plot(time,temp, pch=20, col ="grey",main = "Data fit for Rasmussen and Williams' Algorithm")
 
 # Fit the GP with built-in square exponential kernel (called rbfdot in kernlab).
 #k_20_100 <- SEkernel(sigmaf = 20, ell = 100)
@@ -264,7 +280,6 @@ resZ = posteriorGP(X = time, y = temp, Xstar, sigmaNoise = sigmaNoise, sigmaF = 
 meanPredZ <- resZ$mean
 varPredZ <- resZ$var
 
-plot(time, temp, pch=20, col ="grey",main = "Data fit for Rasmussen and Williams' Algorithm")
 lines(time, meanPredZ, col="blue", lwd = 2)
 lines(time, meanPredZ+1.96*sqrt(varPredZ),col="blue", lty = 2)
 lines(time, meanPredZ-1.96*sqrt(varPredZ),col="blue", lty = 2)
@@ -289,14 +304,15 @@ sigmaNoise = sd(quadFit$residuals)
 
 # Fit the GP with built-in square expontial kernel (called rbfdot in kernlab).
 k_20_100 <- SEkernel(sigmaf = 20, ell = 100)
-GPfit2 <- gausspr(day, temp, kernel = k_20_100 , var = sigmaNoise^2, variance.model = TRUE,scaled=FALSE)
+GPfit2 <- gausspr(day, temp, kernel = k_20_100 , var = sigmaNoise^2, 
+                  variance.model = TRUE,scaled=FALSE)
 meanPred2 <- predict(GPfit2, day)
 varPred2 <- predict(GPfit2, day, type="sdeviation")
 
 plot(time,temp, pch=20, col="grey", main="Data fit for Time model and Day model")
 lines(time, meanPred1, col="red", lwd = 2)
-lines(time, meanPred1+1.96*stdPred1,col="red", lwd = 1, lty = 2)
-lines(time, meanPred1-1.96*stdPred1,col="red", lwd = 1, lty = 2)
+lines(time, meanPred1+1.96*varPred1,col="red", lwd = 1, lty = 2)
+lines(time, meanPred1-1.96*varPred1,col="red", lwd = 1, lty = 2)
 
 lines(time, meanPred2, col="blue", lwd = 2)
 lines(time, meanPred2+1.96*varPred2,col="blue", lwd = 1, lty = 2)
@@ -318,17 +334,19 @@ Finally, implement the following extension of the squared exponential kernel wit
 $$k(x,x') = \sigma_f^2\exp\{-\frac{2\sin^2(\pi|x-x'|/d)}{l_1^2}\}\exp\{-\frac{1}{2}\frac{|x-x'|^2}{l_2^2}\}$$ Note that we have two different length scales in the kernel. Intuitively, $l_1$ controls the correlation between two days in the same year, and $l_2$ controls the correlation between the same day in different years. Estimate the GP model using the time variable with this kernel and hyperparameters $\sigma_f = 20$, $l_1 = 1$, $l_2 = 100$ and $d = 365$. Use the `gausspr` function with the option `scaled=FALSE`, otherwise these $\sigma_f$ , $l_1$ and $l_2$ values are not suitable. Compare the fit to the previous two models (with $\sigma_f = 20$ and $l = 100$). Discuss the results.
 
 ```{r 2.5}
-SEkernelPeriodic <- function(sigmaf = 20, ell1 = 1, ell2 = 100, d = 365){
+SEkernelPeriodic <- function(sigmaf = 20, ell1 = 1, ell2 = 100, d = 365) 
+{
   rval <- function(x, y = NULL) {
       r = sqrt(crossprod(x-y));
-      return(sigmaf**2 * exp(-(2*sin(pi*abs(x-y)/d)**2)/ell1**2) * exp(-0.5*(abs(x-y)**2)/ell2**2))
+      return(sigmaf**2 * exp(-(2*sin(pi*abs(x-y)/d)^2)/ell1^2) * exp(-0.5*(abs(x-y)^2)/ell2^2))
     }
   class(rval) <- "kernel"
   return(rval)
 } 
 
-k_periodic <- SEkernelPeriodic()
-GPfit3 <- gausspr(time, temp, kernel = k_periodic , var = sigmaNoise^2, variance.model = TRUE,scaled=FALSE)
+k_periodic <- SEkernelPeriodic(sigmaf = 20, ell1 = 1, ell2 = 100, d = 365)
+GPfit3 <- gausspr(time, temp, kernel = k_periodic , var = sigmaNoise^2, 
+                  variance.model = TRUE,scaled=FALSE)
 meanPred3 <- predict(GPfit3, time)
 varPred3 <- predict(GPfit3, time, type="sdeviation")
 
@@ -341,12 +359,8 @@ lines(time, meanPred3-1.96*varPred3,col="blue", lwd = 1, lty = 2)
 legend(1500, -10, legend=c("Time Model mean", "Day Model mean", 
                            "Periodic Kernel mean", "Periodic Kernel 95% conf. bands"),
        col=c("red", "green", "blue", "blue"), lty=c(1,1,1,2), cex=0.8)
-
 ```
-
-Discussion of the results: 
-
-The locally periodic kernel seems to have the "best of both worlds" compared to the two previous kernels as it takes into account both the time since start and day of the year.
+The locally periodic kernel fits the data much better than the previous two methods. The locally periodic kernel seems to have the "best of both worlds" compared to the two previous kernels as it takes into account both the time since start and the day of the year to fit.
 
 
 ## 3. GP Classification with kernlab.
@@ -390,16 +404,16 @@ names(gridPoints) <- names(data)[1:2]
 probPreds <- predict(GPfitfraud, gridPoints, type="probabilities")
 
 # Plotting for Prob(fraud)
-contour(x1,x2,matrix(probPreds[,2],100,byrow = TRUE), 20, xlab = "varWave", ylab = "skewWave", 
-        main = 'Prob(Fraud = 1) - Fraud = 1 is blue')
-points(data[data[,5]==0,1],data[data[,5]=='0',2],col="red", pch=20) # Not fraud
-points(data[data[,5]==1,1],data[data[,5]=='1',2],col="blue", pch=20) #Fraud
+contour(x1,x2,matrix(probPreds[,2],100,byrow = TRUE), 20, xlab = "varWave", 
+        ylab = "skewWave", main = 'Prob(Fraud = 1) - Fraud = 1 is blue')
+points(data[data[,5]==0,1],data[data[,5]=='0',2],col="red") # Not fraud
+points(data[data[,5]==1,1],data[data[,5]=='1',2],col="blue") #Fraud
 
 # Plotting for Prob(fraud)
-contour(x1,x2,matrix(probPreds[,1],100,byrow = TRUE), 20, xlab = "varWave", ylab = "skewWave", 
-        main = 'Prob(Fraud = 0) - Fraud = 0 is red')
-points(data[data[,5]==0,1],data[data[,5]=='0',2],col="red", pch=20) # Not fraud
-points(data[data[,5]==1,1],data[data[,5]=='1',2],col="blue", pch=20) #Fraud
+contour(x1,x2,matrix(probPreds[,1],100,byrow = TRUE), 20, xlab = "varWave", 
+        ylab = "skewWave", main = 'Prob(Fraud = 0) - Fraud = 0 is red')
+points(data[data[,5]==0,1],data[data[,5]=='0',2],col="red") # Not fraud
+points(data[data[,5]==1,1],data[data[,5]=='1',2],col="blue") #Fraud
 
 # Accuracy and Confusion matrix: 
 print("Confusion Matrix:")
@@ -448,7 +462,7 @@ probPredstest <- predict(GPfitfraud, data[test_idx,1:4], type="probabilities")
 predsTest = as.factor(colnames(probPredstest)[apply(probPredstest,1,which.max)])
 
 #Confusion Matrix and Accuracy
-cm = table(True = data[test_idx,5], Prediction = predsTest)
+cm = table(True =  data[test_idx,5], Prediction = predsTest)
 print("Confusion Matrix")
 print(cm)
 print("Accuracy")
@@ -456,4 +470,5 @@ print(sum(diag(cm))/sum(cm))
 ```
 
 Comparaison of the two models:
+
 While the model with only two covariates was already really good (92.5% accuracy on test data), the model with four covariates is even better with 99.5% accuracy. Only 2 test points were misclassified. One could argue that the accuracy gained from adding to two covariates may not be worth the additional computational cost of fitting the model with the two extra covariates, since it was already really good without. (Had to run `ulimit -s hard` in terminal to compute the last question)
